<resources>
    <string name="app_name">UserInterfaceTry</string>
    <string name="title_home">用户中心</string>
    <string name="title_dashboard">副卡管理</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nomeanning">detailsdetailsdetailsdetails</string>
    <string name="menue_detail">详情</string>
    <string name="last_use">最后使用时间：</string>
    <string name="register_title">注册个账号</string>
    <string name="related_lock_title">关联下门锁</string>
    <string name="guest_card_title">我拥有的副卡</string>
    <string name="master_home_title">我的主卡</string>

    <string name="relate_fail">关联失败 重试</string>

    <string name="aiddescription">apdu Service</string>
    <string name="aiddescriptionservice">apdu Service Name</string>
    <string name="keynotfound">找不到要删除的内容</string>
    <string name="keyduplicated">内容重复</string>
    <string name="title_activity_change_user_profile">设置</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="settings_old_pwd_check">oldpasswordcheck</string>
    <string name="settings_new_master_pwd">newmasterpwd</string>
    <string name="settings_new_master_name">newmastername</string>
    <string name="settings_log_pass_data">logpassdata</string>
    <string name="settings_card_data_settings">carddatasettings</string>

    <string name="change_settings_success">修改成功</string>
    <string name="change_settings_fail">修改失败</string>



    <string name="horizontal_timeline">Horizontal Timeline</string>
    <string name="vertical_timeline">Vertical Timeline</string>
    <string name="horizontal_timeline_w_padding">Horizontal Timeline With Line Padding</string>
    <string name="vertical_timeline_w_padding">Vertical Timeline With Line Padding</string>
</resources>
